5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1594_1800.log
== TEST (2019-03-22 10:14:44) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x= (a**2)+(b**2)+(c**2)
y= a + b + c
total= x/y
print(round(total, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 10:14:51) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x= (a**2)+(b**2)+(c**2)
y= a + b + c
total= x/y
print(round(total, 6))
-- EXECUTION TIME:
0.130897
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:17:28) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x== (a**2)+(b**2)+(c**2)/ a+b+c

print(round(x, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x== (a**2)+(b**2)+(c**2)/ a+b+c
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:17:45) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x == (a**2)+(b**2)+(c**2)/ a+b+c

print(round(x, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x == (a**2)+(b**2)+(c**2)/ a+b+c
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:18:01) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)/ a+b+c

print(round(x, 6))
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:18:15) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)/a+b+c

print(round(x, 6))
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:18:34) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)/(a+b+c)

print(round(x, 6))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:19:25) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c
t=x/y
print(round(t6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(t6))
NameError: name 't6' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:19:35) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c
t=x/y
print(round(t,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 10:19:40) 
-- CODE:
a=float(input("Insira o valor de A:"))
b=float(input("Insira o valor de B:"))
c=float(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c
t=x/y
print(round(t,6))
-- EXECUTION TIME:
0.130746
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:02:18) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c
t=x/y
print(round(t,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:02:27) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c
t=x/y
print(round(t,6))
-- EXECUTION TIME:
0.137945
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:02:57) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c > 0
t=x/y
print(round(t,6))
-- EXECUTION TIME:
0.163387
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1925.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
337725.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22504.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:03:01) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c > 0
t=x/y
print(round(t,6))
-- OUTPUT:
1925.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:13:53) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c > 0
t=x/y
print(round(t,6))
-- OUTPUT:
1925.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:14:12) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c 
t=x/y
print(round(t,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:14:21) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c 
t=x/y
print(round(t,6))
-- EXECUTION TIME:
0.133999
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:17:06) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c 
t=x/y
print(round(t,))
-- OUTPUT:
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:17:13) 
-- CODE:
a=int(input("Insira o valor de A:"))
b=int(input("Insira o valor de B:"))
c=int(input("Insira o valor de C:"))
x = (a**2)+(b**2)+(c**2)
y= a+b+c 
t=x/y
print(round(t,7))
-- EXECUTION TIME:
0.130071
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
